--- a/css/style.css
+++ b/css/style.css
@@ -48,23 +48,24 @@
 
 @media (min-width: 500px) {
   .hero {
-    background: url(/images/desktop/image-hero.jpg) top/cover no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/images/desktop/image-hero.jpg);
+    background-repeat: no-repeat;
+    background-position: top;
     grid-template-rows: auto 1fr auto;
     padding: 2rem;
-    height: 50vh; }
+    height: 70vh; }
     .hero__title {
       width: 400px;
       font-size: 3rem;
       padding: 1.5rem;
       margin: 0; }
   .nav {
-    padding: 0; }
-    .nav__links {
-      background: none; } }
+    padding: 0; } }
 
 @media (min-width: 700px) {
   .hero {
-    padding: 2rem 5rem; }
+    padding: 2rem 5rem;
+    height: 80vh; }
   .nav {
     align-items: center;
     padding: 0; }
@@ -72,6 +73,7 @@
       display: flex;
       flex-direction: row;
       position: relative;
+      background: none;
       height: auto;
       width: auto;
       opacity: 1;
@@ -208,6 +210,7 @@
       width: 100%;
       grid-column: 1 / 3;
       grid-row: 1 / 2;
+      filter: brightness(0.7);
       transition: all 0.7s ease; }
 
 @media (min-width: 800px) {
