--- a/scss/_creations.scss
+++ b/scss/_creations.scss
@@ -66,6 +66,7 @@
       width: 100%;
       grid-column: 1 / 3;
       grid-row: 1 / 2;
+      filter: brightness(0.7);
       transition: all 0.7s ease;
     }
   }
