--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -61,10 +61,13 @@
 
 @media (min-width: 500px) {
   .hero {
-    background: url(/images/desktop/image-hero.jpg) top/cover no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url(/images/desktop/image-hero.jpg);
+    background-repeat: no-repeat;
+    background-position: top;
     grid-template-rows: auto 1fr auto;
     padding: 2rem;
-    height: 50vh;
+    height: 70vh;
 
     &__title {
       width: 400px;
@@ -76,16 +79,13 @@
 
   .nav {
     padding: 0;
-
-    &__links {
-      background: none;
-    }
   }
 }
 
 @media (min-width: 700px) {
   .hero {
     padding: 2rem 5rem;
+    height: 80vh;
   }
 
   .nav {
@@ -96,6 +96,7 @@
       display: flex;
       flex-direction: row;
       position: relative;
+      background: none;
       height: auto;
       width: auto;
       opacity: 1;
